2002-04-16  Matt Wilson  <msw@redhat.com>

	* gtk/libglade.override (_wrap_glade_bindtextdomain): added
	wrapper which will allow user to bind a textdomain.  Also sets the
	codeset to UTF-8 if bind_textdomain_codeset is available.

	* config.h.in: added HAVE_BIND_TEXTDOMAIN_CODESET

	* configure.in: check for bind_textdomain_codeset

	* gtk/libglade.defs (bindtextdomain): added extra function to
	implement gtk.glade.bindtextdomain

	* gtk/gtk.override
	(pygtk_cell_data_func_marshal,
	_wrap_gtk_tree_view_column_set_cell_data_func): added wrapper for
	GtkTreeViewColumn.set_cell_data_func from Jonathan Blandford
	<jrb@redhat.com>

2002-04-17  James Henstridge  <james@daa.com.au>

	* gtk/gtk.defs, gdk/gdk.defs: updates to match final gtk 2.0 APIs.

2002-04-15  James Henstridge  <james@daa.com.au>

	* pango.override: add a PangoAttribute wrapper type, constructors
	for various attributes, and methods for inserting attributes in a
	PangoAttrList.

	* pango.defs, gtk/gdk.defs: add missing definitions.

2002-04-12  Xavier Ordoquy  <mcarkan@user.sourceforge.net>

	* configure.in:
	* gtk/Makefile.am:
	Added the gtk.gl module.

	* gtk/gtkgl.defs:
	* gtk/gtkgl.override:
	* gtk/gtkglmodule.c: (initgl):
	Updated the gtkgl module and changed the name to gtk.gl

	* examples/gl/dots.py:
	Updated example but still needs some work.

	* examples/gl/cone.py:
	* examples/gl/gears.py:
	Updated working examples.

2002-04-10  James Henstridge  <james@daa.com.au>

	* gtk/gtk.defs: remove deprecation messages for many GtkList and
	GtkListItem methods, as they are still required for the non
	deprecated GtkCombo.  GtkList's constructor is still marked
	deprecated.

	* gtk/gtk.override (_wrap_gtk_text_iter_get_char): don't raise an
	exception for unicode chars > 0xffff if we have 32 bit unicode
	chars in python.

2002-04-08  James Henstridge  <james@daa.com.au>

	* pango.override (_wrap_pango_glyph_string_get_logical_widths):
	add wrapper.
	(_wrap_pango_parse_markup): add wrapper.
