@@ -145,12 +145,6 @@
   )
 )
 
-(define-method get_toplevel_names
-  (of-object "GladeXML")
-  (c-name "glade_xml_get_toplevel_names")
-  (return-type "gchar**")
-)
-
 (define-function get_widget_name
   (c-name "glade_get_widget_name")
   (return-type "const-char*")
