@@ -1,3 +1,13 @@
+2002-04-18  James Henstridge  <james@daa.com.au>
+
+	* codegen/h2def.py (strip_comments): add function to strip
+	comments, and get rest of script to use it.  This one doesn't use
+	RE's, so it doesn't cause a stack overflow when parsing
+	atkobject.h.
+
+	* gtk/libglade.defs (get_toplevel_names): remove def, as it isn't
+	in the libglade API anymore.
+
 2002-04-16  Matt Wilson  <msw@redhat.com>
 
 	* gtk/libglade.override (_wrap_glade_bindtextdomain): added
